--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "server": "json-server --watch api/db.json --port 5000",
