--- a/package.json
+++ b/package.json
@@ -14,15 +14,11 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "server": "json-server --watch api/db.json --port 5000",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
@@ -31,12 +27,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "gh-pages": "^2.0.1",
-    "json-server": "^0.14.0"
+    "gh-pages": "^2.0.1"
   }
 }
